2016-07-22 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s,
	  support/regression/tests/memory.c:
	  Fix an issue in stm8 unrolled memcpy().
	* device/lib/stm8/__mulsint2slong.s:
	  Optimize multiplication routine for small operands.

2016-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/Makefile.in,
	  device/lib/stm8/__mulsint2slong.s,
	  src/SDCCcse.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/muldiv.c,
	  Support for deparate 16x16->32 multiplication routine, RFE #507.

2016-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Narrow arithmetic operations when results are cast to narrower type: RFE #506.

2016-07-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/astlcs90/t90mch.c
	  Fix a potential defect.

2016-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/Makefile.in,
	  device/lib/stm8/strcpy.s:
	  Partially unrolled, slightly faster strcpy() for stm8.
	* src/stm8/gen.c,
	  src/SDCCsymt.c:
	  More efficient handling of boolean values.
	* device/lib/r2k/Makefile.in:
	  Fix bug #2526.
	* src/stm8/main.c:
	  Remove unused vars.

2016-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Slight improvement in code generation.

2016-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Special case for int multiplication by 7 and 100.

2016-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Improve stm8 memcpy().
	* support/regression/tests/memory.c:
	  Better memcpy() test coverage.

2016-07-15 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Improve stm8 memcpy().

2016-07-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Partially unroll stm8 memcpy() for speed.
	* device/lib/stm8/strcmp.s:
	  Partially unroll stm8 strcmp() for speed.

2016-07-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/gen.c: